syntax = "proto3";

import "stat_prefs.proto";

option java_package = "com.heyzeusv.solitaire";
option java_multiple_files = true;

message Settings {
    AnimationDurationsSetting animation_durations = 1;
    Game selected_game = 2;
    bool updated_classic_westcliff_score = 100;
}

enum AnimationDurationsSetting {
    NONE = 0;
    SLOWEST = 1;
    SLOW = 2;
    FAST = 3;
    FASTEST = 4;
}